--- a/index.html
+++ b/index.html
@@ -61,6 +61,88 @@
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="top-btm" type="button">Order Service</button>
+          <div class="modal">
+            <div class="modal-window">
+              <div class="icon-close-cont">
+                <svg class="icon-close" width="8" height="8">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </div>
+              <p class="form-title">
+                Leave your contacts and we will call you back
+              </p>
+              <form class="form" name="top-btm-form" autocomplete="off">
+                <div class="form-input-cont">
+                  <label class="form-label">
+                    Name
+                    <input
+                      class="form-input"
+                      type="text"
+                      name="Name"
+                      required
+                    />
+                    <svg class="icon-form" width="18" height="18">
+                      <use href="./images/icons.svg#icon-person"></use>
+                    </svg>
+                  </label>
+                  <label class="form-label">
+                    Phone
+                    <input
+                      class="form-input"
+                      type="tel"
+                      name="Phone"
+                      required
+                    />
+                    <svg class="icon-form" width="18" height="18">
+                      <use href="./images/icons.svg#icon-phone"></use>
+                    </svg>
+                  </label>
+                  <label class="form-label">
+                    Email
+                    <input
+                      class="form-input"
+                      type="email"
+                      name="Email"
+                      required
+                    />
+                    <svg class="icon-form" width="18" height="18">
+                      <use href="./images/icons.svg#icon-email"></use>
+                    </svg>
+                  </label>
+                  <label class="form-label-coment">
+                    Comment
+                    <textarea
+                      class="input-comment"
+                      name="Comment"
+                      placeholder="Text input"
+                    ></textarea>
+                  </label>
+                </div>
+                <div class="checkbox">
+                  <label class="checkbox-label">
+                    <input
+                      class="checkbox-fake"
+                      type="checkbox"
+                      name="privacy-policy"
+                      value="I accept the terms and conditions of the Privacy Policy"
+                      required
+                    />
+                    <span class="checkbox-real"
+                      ><svg class="icon-checkbox" width="16" height="16">
+                        <use href="./images/icons.svg#icon-click"></use></svg
+                    ></span>
+                    <p class="checkbox-text">
+                      I accept the terms and conditions of the
+                      <span class="check-label-span">
+                        <a href="#">Privacy Policy</a>
+                      </span>
+                    </p></label
+                  >
+                </div>
+                <button class="btn-form" type="submit">Send</button>
+              </form>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -540,6 +622,22 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form">
+          <p class="social-media">Subscribe</p>
+          <form>
+            <input
+              class="form-subscribe"
+              type="email"
+              name="Email"
+              placeholder="Email"
+            />
+            <button class="btn-subscribe" type="submit">
+              Subscribe<svg class="icon-subscribe" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
