--- a/index.html
+++ b/index.html
@@ -61,88 +61,6 @@
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="top-btm" type="button">Order Service</button>
-          <div class="modal">
-            <div class="modal-window">
-              <div class="icon-close-cont">
-                <svg class="icon-close" width="8" height="8">
-                  <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-              </div>
-              <p class="form-title">
-                Leave your contacts and we will call you back
-              </p>
-              <form class="form" name="top-btm-form" autocomplete="off">
-                <div class="form-input-cont">
-                  <label class="form-label">
-                    Name
-                    <input
-                      class="form-input"
-                      type="text"
-                      name="Name"
-                      required
-                    />
-                    <svg class="icon-form" width="18" height="18">
-                      <use href="./images/icons.svg#icon-person"></use>
-                    </svg>
-                  </label>
-                  <label class="form-label">
-                    Phone
-                    <input
-                      class="form-input"
-                      type="tel"
-                      name="Phone"
-                      required
-                    />
-                    <svg class="icon-form" width="18" height="18">
-                      <use href="./images/icons.svg#icon-phone"></use>
-                    </svg>
-                  </label>
-                  <label class="form-label">
-                    Email
-                    <input
-                      class="form-input"
-                      type="email"
-                      name="Email"
-                      required
-                    />
-                    <svg class="icon-form" width="18" height="18">
-                      <use href="./images/icons.svg#icon-email"></use>
-                    </svg>
-                  </label>
-                  <label class="form-label-coment">
-                    Comment
-                    <textarea
-                      class="input-comment"
-                      name="Comment"
-                      placeholder="Text input"
-                    ></textarea>
-                  </label>
-                </div>
-                <div class="checkbox">
-                  <label class="checkbox-label">
-                    <input
-                      class="checkbox-fake"
-                      type="checkbox"
-                      name="privacy-policy"
-                      value="I accept the terms and conditions of the Privacy Policy"
-                      required
-                    />
-                    <span class="checkbox-real"
-                      ><svg class="icon-checkbox" width="16" height="16">
-                        <use href="./images/icons.svg#icon-click"></use></svg
-                    ></span>
-                    <p class="checkbox-text">
-                      I accept the terms and conditions of the
-                      <span class="check-label-span">
-                        <a href="#">Privacy Policy</a>
-                      </span>
-                    </p></label
-                  >
-                </div>
-                <button class="btn-form" type="submit">Send</button>
-              </form>
-            </div>
-          </div>
         </div>
       </section>
 
@@ -623,15 +541,17 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
+        <div class="footer-form-cont">
           <p class="social-media">Subscribe</p>
-          <form>
-            <input
-              class="form-subscribe"
-              type="email"
-              name="Email"
-              placeholder="Email"
-            />
+          <form class="footer-form">
+            <label class="form-label">
+              <input
+                class="form-subscribe"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
             <button class="btn-subscribe" type="submit">
               Subscribe<svg class="icon-subscribe" width="24" height="24">
                 <use href="./images/icons.svg#icon-frame"></use>
@@ -641,5 +561,93 @@
         </div>
       </div>
     </footer>
+
+    <div class="modal">
+      <div class="modal-window">
+        <button class="button-close" type="button">
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+        <form class="form" name="top-btm-form" autocomplete="off">
+          <div class="form-cont">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="form-input-cont">
+              <input
+                class="form-input"
+                type="text"
+                name="Name"
+                id="user-name"
+                required
+              />
+              <svg class="icon-form" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-cont">
+            <label class="form-label" for="user-phone">Phone</label>
+            <div class="form-input-cont">
+              <input
+                class="form-input"
+                type="tel"
+                name="phone"
+                id="user-phone"
+                required
+              />
+              <svg class="icon-form" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-cont">
+            <label class="form-label" for="user-email">Email</label>
+            <div class="form-input-cont">
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                id="user-email"
+                required
+              />
+              <svg class="icon-form" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-comment-cont">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="input-comment"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="checkbox">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+              d="user-privacy"
+              required
+            />
+            <label class="checkbox-label" for="user-privacy"
+              ><span class="checkbox-span"
+                ><svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-click"></use></svg
+              ></span>
+              I accept the terms and conditions of the
+              <a class="policy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="btn-form" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
