--- a/index.html
+++ b/index.html
@@ -633,13 +633,13 @@
               type="checkbox"
               name="user-privacy"
               value="true"
-              d="user-privacy"
+              id="user-privacy"
               required
             />
             <label class="checkbox-label" for="user-privacy"
               ><span class="checkbox-span"
                 ><svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-click"></use></svg
+                  <use href="./images/icons.svg#icon-check-mark"></use></svg
               ></span>
               I accept the terms and conditions of the
               <a class="policy-link" href="">Privacy Policy</a>
