--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
               <input
                 class="form-input"
                 type="text"
-                name="Name"
+                name="user-name"
                 id="user-name"
                 required
               />
